# aerial_manipulators

./: .gitignore  CMakeLists.txt  Dockerfile.manipulator  README.md  package.xml
aerial_manipulators_control/: CMakeLists.txt  package.xml
aerial_manipulators_control/config/: JointCtlParams.cfg  aerial_manipulator_parameters.yaml  aerial_manipulator_parameters_3rx.yaml  aerial_manipulator_parameters_asap.yaml  aerial_manipulator_parameters_asap_4r.yaml  asap_4r_manipulator_controllers.yaml  asap_manipulator_4r_controllers.yaml  asap_manipulator_4r_parameters.yaml  asap_manipulator_4r_parameters_real.yaml  asap_manipulator_4r_position_control.yaml  asap_manipulator_4r_position_control_retuned.yaml  asap_manipulator_4r_reversed_controllers.yaml  asap_manipulator_4r_reversed_parameters_real.yaml  asap_manipulator_4r_velocity_control.yaml  asap_manipulator_4r_velocity_control_retuned.yaml  asap_manipulator_controllers.yaml  asap_manipulator_parameters.yaml  asap_manipulator_position_control.yaml  asap_manipulator_velocity_control.yaml  icl_dynamixel_info.yaml  icl_manipulator_parameters.yaml  impedance_control_params.cfg  wp_manipulator_3r_controllers.yaml  wp_manipulator_3r_dh_parameters.yaml  wp_manipulator_3rx_controllers.yaml  wp_manipulator_3rx_dh_parameters.yaml  wp_manipulator_3rx_position_control.yaml  wp_manipulator_3rx_position_control_retuned.yaml  wp_manipulator_3rx_velocity_control.yaml  wp_manipulator_3rx_velocity_control_retuned.yaml  wp_manipulator_position_control_retuned.yaml  wp_manipulator_velocity_control.yaml  wp_manipulator_velocity_control_retuned.yaml
aerial_manipulators_control/include/aerial_manipulators_control/: JointPositionControl.h  ManipulatorControl.h  ManipulatorControlNode.h  PID.h  WPManipulatorControl.h
aerial_manipulators_control/launch/: aerial_manipulator_4r_control.launch  asap_manipulator_4r_control.launch  asap_manipulator_4r_gazebo_control.launch  asap_manipulator_4r_reversed_control.launch  asap_manipulator_control.launch  asap_manipulator_gazebo_control.launch  dynamixel_controller.launch  icl_dynamixel_control.launch  wp_manipulator_3rx_gazebo_control.launch  wp_manipulator_gazebo_control.launch
aerial_manipulators_control/scripts/: icl_gripper_controller.py  simple_dynamixel_controller.py
aerial_manipulators_control/src/: AerialManipulatorControl.cpp  JointPositionControl.cpp  ManipulatorControl.cpp  ManipulatorControlNode.cpp  PID.cpp  WPManipulatorControl.cpp
aerial_manipulators_description/: CMakeLists.txt  README.md  package.xml
aerial_manipulators_description/launch/: spawn_asap_manipulator.launch  spawn_asap_manipulator_4r.launch  spawn_asap_manipulator_4r_reversed.launch  spawn_cmanip.launch  spawn_wp_manipulator.launch  spawn_wp_manipulator_3R.launch
aerial_manipulators_description/urdf/: asap_manipulator.base.urdf.xacro  asap_manipulator.gazebo.xacro  asap_manipulator_4r.base.urdf.xacro  asap_manipulator_4r.gazebo.xacro  asap_manipulator_4r_moveit.base.urdf.xacro  asap_manipulator_4r_reversed.base.urdf.xacro  asap_manipulator_4r_reversed.gazebo.xacro  asap_manipulator_4r_reversed_moveit.base.urdf.xacro  asap_manipulator_moveit.base.urdf.xacro  manipulator_base.urdf.xacro  wp_manipulator.base.urdf.xacro  wp_manipulator.gazebo.xacro  wp_manipulator_3R.base.urdf.xacro  wp_manipulator_3R.gazebo.xacro  wp_manipulator_3R_moveit.base.urdf.xacro  wp_manipulator_3r.base.urdf.xacro  wp_manipulator_3r.gazebo.xacro  wp_manipulator_3r_moveit.base.urdf.xacro  wp_manipulator_3rx.base.urdf.xacro  wp_manipulator_3rx.gazebo.xacro  wp_manipulator_3rx_moveit.base.urdf.xacro  wp_manipulator_moveit.base.urdf.xacro
aerial_manipulators_moveit/asap_manipulator/: .setup_assistant  CMakeLists.txt  package.xml
aerial_manipulators_moveit/asap_manipulator_4r/: .setup_assistant  CMakeLists.txt  package.xml
aerial_manipulators_moveit/asap_manipulator_4r_reversed/: .setup_assistant  CMakeLists.txt  package.xml
aerial_manipulators_moveit/wp_manipulator/: .setup_assistant  CMakeLists.txt  package.xml
aerial_manipulators_moveit/wp_manipulator_3R/: .setup_assistant  CMakeLists.txt  package.xml
aerial_manipulators_moveit/wp_manipulator_3r/: .setup_assistant  CMakeLists.txt  package.xml
aerial_manipulators_moveit/wp_manipulator_3rx/: .setup_assistant  CMakeLists.txt  package.xml
aerial_manipulators_startup/: CMakeLists.txt  package.xml
aerial_manipulators_startup/hawk_asap_manipulator_sim/: session.yml  simulation_setup.sh
aerial_manipulators_startup/hawk_manipulator/: .tmuxinator.yml  hawk_manipulator_setup.sh  optitrack_setup.sh  session.yml  session_asap_manipulator_4r.yml  start.sh
cfg/: wp_manipulator_dh_parameters.yaml
config/: JointCtlParams.cfg  cmanip_position_control.yaml  cmanip_velocity_control.yaml
docker/: Dockerfile.manipulator  build_docker.sh  run_docker.sh  start_docker.sh
drawings/wp_manipulator/: manipulator_circle.STEP  manipulator_link1_100.STEP  manipulator_link1_50.STEP  manipulator_link2_5.STEP
include/aerial_manipulators/: KalmanFilter.h  WPManipulatorControl.h  WPManipulatorDirectKinematics.h  WPManipulatorForceEstimation.h  WPManipulatorInverseDynamics.h  WPManipulatorInverseKinematics.h  joint_position_control.h
launch/: cmanip.launch  cmanip_control.launch  dynamixel_controller.launch  spawn_cmanip.launch
meshes/wp_manipulator/: link1.dae  link2.dae  link3.dae  link4.dae  link5.dae
moveit_asap_config/: .setup_assistant  CMakeLists.txt  package.xml
moveit_asap_config/config/: asap_manipulator.srdf
moveit_asap_config/launch/: chomp_planning_pipeline.launch.xml  (+12 more)
msg/: float5.msg  float6.msg
src/: KalmanFilter.cpp  PID.cpp  WPManipulatorControl.cpp  WPManipulatorDirectKinematics.cpp  WPManipulatorForceEstimation.cpp  WPManipulatorInverseDynamics.cpp  WPManipulatorInverseKinematics.cpp  cmanipForwardKinematics.py  cmanipInverseKinematics.py  cmanipRamp.py  dynamics.cpp  forceEstimationAll.cpp  joint_position_control.cpp  median_filter.cpp
urdf/: cmanip.base.urdf.xacro  cmanip.gazebo.xacro  manipulator_base.urdf.xacro  wp_manipulator.base.urdf.xacro  wp_manipulator.gazebo.xacro
(+217 files in other folders)
