<?xml version="1.0"?>
<package>
  <name>aerial_manipulators_control</name>
  <version>0.0.0</version>
  <description>The aerial_manipulators_control package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="marko.car@fer.hr">Marko Car</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_modules</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>yaml-cpp</build_depend>
  <build_depend>rospack</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_ros_planning</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>moveit_ros_perception</build_depend>
  <build_depend>moveit_visual_tools</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>impedance_control</build_depend>

  <run_depend>cmake_modules</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>yaml-cpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>rospack</run_depend>
  <run_depend>moveit_core</run_depend>
  <run_depend>moveit_commander</run_depend>
  <run_depend>moveit_fake_controller_manager</run_depend>
  <run_depend>moveit_ros_planning_interface</run_depend>
  <run_depend>moveit_ros_perception</run_depend>
  <run_depend>moveit_visual_tools</run_depend>
  <run_depend>wp_manipulator</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>eigen_conversions</run_depend>
  <run_depend>impedance_control</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>